<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ServiceTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start Service</string>
    <string name="stop">Stop Service</string>
    <string name="bind">Bind Service</string>
    <string name="unbind">Unbind Service</string>
    <string name="start_intent_service">Start IntentService</string>

</resources>
